@@ -57,6 +57,8 @@
     <Compile Include="Interop\Apple\Interop.Apple.xattr.cs" />
     <Compile Include="Interop\Apple\Interop.Apple.statfs.cs" />
     <Compile Include="Interop\Linux\Interop.Linux.xattr.cs" />
+    <Compile Include="Interop\Linux\Interop.Linux.statfs.cs" />
+    <Compile Include="Interop\Linux\Interop.Linux.types.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
