@@ -1,3 +1,10 @@
+2015-05-03  Natalia Portillo  <claunia@claunia.com>
+
+	* Claunia.IO.csproj:
+	* Interop/Linux/Interop.Linux.types.cs:
+	* Interop/Linux/Interop.Linux.statfs.cs:
+	  Implement Linux statfs(2).
+
 2015-04-26  Natalia Portillo  <claunia@claunia.com>
 
 	* Claunia.IO.csproj:
